# qa_relevance_llm_eval

./: Makefile  README.md  pyproject.toml
.github/: publish_pypi.yml
.github/workflows/: publish_pypi.yml
tests/: test_validator.py
validator/: __init__.py  main.py  post-install.py
