[project]
name = "qa_relevance_llm_eval"
version = "0.0.0"
description = "Validates that an answer is relevant to the question asked by asking the LLM to self evaluate."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "rstr",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]